# template_python_package

./: README.md  compose-dev.yaml  devcontainer.dockerfile  pyproject.toml  requirements.docs.txt  starthere.md
docs/source/: conf.py  index.rst  modules.rst  template_package.rst
src/template_package/: __init__.py  example_module.py  hi.py
