[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_package"
authors = [
  { name="Template Changeme", email="template@changeme.com"}
]
description = "a template python package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]

keywords = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "template_package.__version__"}

[tool.setuptools.package-data]
